<resources>
    <string name="app_name">StockManagement</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_product">Products</string>
    <string name="title_supplier">Suppliers</string>
    <string name="title_transaction">Transactions</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="search">Search</string>
    <string name="edit_product">Edit product</string>
    <string name="edit_supplier">Edit supplier</string>
    <string name="address">address</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="contact_person">contact person</string>
    <string name="name">name</string>
    <string name="new_transaction">New transaction</string>
    <string name="transaction_type">Transaction type</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="note">Note</string>
    <string name="filter">Filter</string>
    <string name="error_max_quantity">Max quantity for sale is %1$d</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="supplier">Supplier</string>
    <string name="barcode">Barcode</string>
    <string name="current_stock_level">Current stock level</string>
    <string name="min_stock_level">Min stock level</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="low_stock">Low stock</string>
    <string name="permission_required">Permission Required</string>
    <string name="perimssion_requred_body">You have permanently denied camera access. Please enable it in the app settings to use the scanner.</string>
    <string name="camera_permission_needed">Camera Permission Needed</string>
    <string name="camera_permission_needed_body">Scanning barcodes requires camera access to automatically fill in product details.</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="allow">Allow</string>
    <string name="barcode_scanned">Barcode Scanned!</string>
    <string name="camera_permission_is_required_to_scan">Camera permission is required to scan.</string>
    <string name="can_t_be_lower_than_minimum_stock">Can\'t be lower than minimum stock</string>
    <string name="close">Close</string>
    <string name="export">Export</string>
    <string name="all_transactions">All Transactions</string>
    <string name="qty">Qty</string>
    <string name="date">Date</string>
    <string name="item_name">Item Name</string>
    <string name="add_supplier">Add supplier</string>
    <string name="stock_management_app">Stock Management App</string>
    <string name="please_check_stock_singular">Please check stock, %1$d item is low on stock</string>
    <string name="please_check_stock_plural">Please check stock, %1$d  items are low on stock</string>
</resources>