<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.app.stockmanagement.presentation.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.app.stockmanagement.presentation.product.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_supplier"
        android:name="com.app.stockmanagement.presentation.supplier.SupplierFragment"
        android:label="@string/title_supplier"
        tools:layout="@layout/fragment_supplier" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.app.stockmanagement.presentation.supplier.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />
</navigation>